--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <link rel="shortcut icon" href="assets/images/logos/twitter.png" type="image/x-icon">
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="assets/fonts/fontawesome/css/all.css">
+
+    <meta property="og:title" content="TP Clone Twitter" />
+    <meta property="og:description" content="Notre clone de Twitter, TP Web" />
+    <meta property="og:image" content="https://chadrackkanza.github.io/tp-twitter-clone/assets/images/logos/twitter.png" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://chadrackkanza.github.io/tp-twitter-clone" />
 </head>
 <body>
     <div class="grid ">
