--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TP Clone Twitter</title>
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/styles.css" />
     <link rel="shortcut icon" href="assets/images/logos/twitter.png" type="image/x-icon" />
     <link rel="stylesheet" href="assets/fonts/fontawesome/css/all.css">
 </head>
