--- a/index.html
+++ b/index.html
@@ -64,6 +64,25 @@
                     </button>
                 </div>
             </div>
+
+            <footer>
+                <div class="footer">
+
+                    <div class="footer-gauche">
+                        <img src="assets/images/Icones/image002.png" alt="">
+                        <p>
+                           Victor UX/UI
+                          <br>@victoruxui
+                        </p>
+                    </div>
+                    
+                    <div class="footer-more">
+                        <i class="fa fa-ellipsis"></i> 
+                    </div> 
+
+                </div>
+            </footer>
+
         </div>
 
         <div class="border content">
